# baby-leaps-ai

./: README.md
backend/: .env  pyproject.toml
backend/src/: main.py
backend/src/services/: age_calculator.py  gemini.py
frontend/: README.md  index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: WelcomeCarousel.tsx
frontend/src/pages/: ActualDate.tsx  BabyInfo.tsx  Chat.tsx  ChatConversation.tsx  ExpectedDate.tsx  Welcome.tsx
frontend/src/utils/: calculateLeap.ts
